--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   <h1>
-    <strong>WELCOME TO CLEAN UI ADMIN TEMPLATE</strong>
+    <strong>WELCOME TO CLEAN UI ADMIN TEMPLATES</strong>
   </h1>
   <p>
     Pluggable enterprise-level react application framework.
