code splitting / path fixes / preloader

--- a/src/app/components/LayoutComponents/Footer/footer.component.html
+++ b/src/app/components/LayoutComponents/Footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-9">
         <p>
-          <strong>Clean UI React Admin Template - Best Solution for Your App!</strong>
+          <strong>Clean UI Angular Admin Template - Best Solution for Your App!</strong>
         </p>
         <p>
           Clean UI is a set of modern professional HTML / React / Vue and Angular based templates. It's a powerful and
