--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -3,9 +3,9 @@
     <strong>WELCOME TO CLEAN UI ADMIN TEMPLATES</strong>
   </h1>
   <p>
-    Pluggable enterprise-level react application framework.
+    Pluggable enterprise-level angular application framework.
     <br />
-    An excellent front-end solution for web applications built upon Ant Design and UmiJS.
+    An excellent front-end solution for web applications built upon Ant Design and Angular.
     <br />
     Credentials for testing purposes - <strong>admin@mediatec.org</strong> /
     <strong>cleanui</strong>
