--- a/src/app/layouts/Login/login.component.html
+++ b/src/app/layouts/Login/login.component.html
@@ -6,7 +6,7 @@
           <div class="col-lg-12">
             <div class="logo">
               <a href routerLink="/">
-                <img src="assets/images/logo.png" alt="Clean UI React Admin Template" />
+                <img src="assets/images/logo.png" alt="Clean UI Angular Admin Template" />
               </a>
             </div>
           </div>
