--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -1,20 +1,27 @@
 <nz-layout>
   <nz-back-top></nz-back-top>
   <nz-sider [nzWidth]="256" nzCollapsible [nzCollapsed]="false" [nzBreakpoint]="'lg'">
-    <cui-menu></cui-menu>
+    <ul nz-menu [nzTheme]="'light'" [nzMode]="'inline'">
+      <li nz-menu-item routerLink="/dashboard/alpha">
+        <span><i nz-icon type="file"></i><span class="nav-text">nav 1</span></span>
+      </li>
+      <li nz-menu-item routerLink="/dashboard/beta">
+        <span><i nz-icon type="login"></i><span class="nav-text">nav 2</span></span>
+      </li>
+    </ul>
   </nz-sider>
   <nz-layout>
-      <nz-header>
-        <cui-topbar></cui-topbar>
-      </nz-header>
-      <nz-content style="height: 100%; position: relative;">
-        <div>Breadcrumbs</div>
-        <div class="utils__content">
-          <router-outlet></router-outlet>
-        </div>
-      </nz-content>
-      <nz-footer>
-        <cui-footer></cui-footer>
-      </nz-footer>
+    <nz-header>
+      <cui-topbar></cui-topbar>
+    </nz-header>
+    <nz-content style="height: 100%; position: relative;">
+      <div>Breadcrumbs</div>
+      <div class="utils__content">
+        <router-outlet></router-outlet>
+      </div>
+    </nz-content>
+    <nz-footer>
+      <cui-footer></cui-footer>
+    </nz-footer>
   </nz-layout>
 </nz-layout>
