--- a/src/app/components/LayoutComponents/Menu/menu.component.scss
+++ b/src/app/components/LayoutComponents/Menu/menu.component.scss
@@ -1,1 +1,167 @@
 @import 'src/assets/styles/mixins.scss';
+
+.logo {
+  height: 64px;
+  background: $menuBg-darken;
+  overflow: hidden;
+}
+
+.logoContainer {
+  height: 64px;
+  padding: 13px 20px 15px 22px;
+  img {
+    height: 36px;
+  }
+}
+
+.icon {
+  text-align: center;
+  position: absolute;
+  right: 20px;
+  width: 20px;
+  top: 12px;
+  margin: 0 !important;
+  line-height: 1 !important;
+  color: $text;
+}
+
+.navigation {
+  ::ng-deep {
+    .ant-menu-root {
+      padding: rem(15) 0 rem(30) !important;
+      border: none;
+      > .ant-dropdown-menu-item-divider {
+        margin: 0 23px !important;
+        transition: all 0.3s;
+      }
+    }
+
+    .ant-menu-inline,
+    .ant-menu-vertical,
+    .ant-menu-vertical-left {
+      border-right: none;
+    }
+
+    .ant-menu-inline-collapsed {
+      .title {
+        display: none;
+      }
+
+      .ant-menu-submenu > .ant-menu-submenu-title .ant-menu-submenu-arrow {
+        display: block;
+        opacity: 0.2;
+        top: 48%;
+        right: 14px;
+      }
+
+      .icon {
+        right: 30px;
+      }
+    }
+
+    .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow {
+      right: 50px;
+    }
+
+    .ant-menu-light {
+      .icon {
+        opacity: 0.8;
+      }
+
+      .ant-menu-submenu-arrow {
+        opacity: 0.7;
+      }
+
+      .ant-menu-item:after {
+        right: auto;
+        left: 0;
+      }
+
+      .ant-menu-item,
+      .ant-menu-submenu-title {
+        width: 100%;
+      }
+    }
+    .ant-menu-dark {
+      color: $gray-darken;
+
+      .ant-dropdown-menu-item-divider {
+        opacity: 0.2;
+      }
+
+      .ant-menu-sub {
+        color: $gray-darken;
+        &.ant-menu-inline {
+          box-shadow: none !important;
+          transition: all 0.3s;
+        }
+      }
+
+      .ant-menu-item {
+        color: $gray-darken;
+
+        > a,
+        span {
+          color: $gray-darken;
+          transition: color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+        }
+
+        &:hover {
+          > a,
+          span {
+            color: $white;
+
+            .icon {
+              color: $white !important;
+            }
+          }
+        }
+      }
+
+      .ant-menu-item-selected {
+        > a,
+        span {
+          color: $white !important;
+
+          .icon {
+            color: $white !important;
+          }
+        }
+      }
+
+      .ant-menu-submenu:hover,
+      .ant-menu-submenu-selected,
+      .ant-menu-submenu-open {
+        .icon {
+          opacity: 1;
+          color: $white !important;
+        }
+      }
+
+      .ant-menu-submenu-active {
+        .icon {
+          color: $blue !important;
+        }
+      }
+
+      .ant-menu-inline.ant-menu-sub {
+        box-shadow: none !important;
+        transition: all 0.3s;
+      }
+
+      .ant-menu-item:after {
+        border-right: 3px solid $white !important;
+        right: auto;
+        left: 0;
+      }
+    }
+  }
+}
+
+// .scrollbarDesktop {
+//   height: calc(100vh - 112px) !important;
+// }
+
+// .scrollbarMobile {
+//   height: calc(100vh - 67px) !important;
+// }
