--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -1,14 +1,8 @@
 <nz-layout>
   <nz-back-top></nz-back-top>
-  <nz-sider [nzWidth]="256" nzCollapsible [nzCollapsed]="false" [nzBreakpoint]="'lg'">
-    <ul nz-menu [nzTheme]="'light'" [nzMode]="'inline'">
-      <li nz-menu-item routerLink="/dashboard/alpha">
-        <span><i nz-icon type="file"></i><span class="nav-text">nav 1</span></span>
-      </li>
-      <li nz-menu-item routerLink="/dashboard/beta">
-        <span><i nz-icon type="login"></i><span class="nav-text">nav 2</span></span>
-      </li>
-    </ul>
+  <nz-sider [ngClass]="isLightTheme ? 'sider light' : 'sider'" nzCollapsible="true" [nzBreakpoint]="'lg'" [nzWidth]="256"
+    [nzCollapsed]="isCollapsed" (nzCollapsedChange)="onCollapse($event)">
+    <cui-menu></cui-menu>
   </nz-sider>
   <nz-layout>
     <nz-header>
@@ -16,6 +10,8 @@
     </nz-header>
     <nz-content style="height: 100%; position: relative;">
       <div>Breadcrumbs</div>
+      <button (click)="toggleTheme()">Toggle Theme</button>
+      <button (click)="toggleCollapsed()">Toggle Collapsed</button>
       <div class="utils__content">
         <router-outlet></router-outlet>
       </div>
