--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -9,7 +9,7 @@
       <cui-topbar></cui-topbar>
     </nz-header>
     <nz-content style="height: 100%; position: relative;">
-      <div>Breadcrumbs</div>
+      <cui-breadcrumbs></cui-breadcrumbs>
       <div class="utils__content">
         <button (click)="toggleTheme()">Toggle Theme</button>
         <button (click)="toggleCollapsed()">Toggle Collapsed</button>
