--- a/src/app/components/LayoutComponents/TopBar/topbar.component.html
+++ b/src/app/components/LayoutComponents/TopBar/topbar.component.html
@@ -1,12 +1,12 @@
 <div class="topbar">
   <div class="mr-4">
-    [IssuesHistory]
+    <cui-topbar-issues-history></cui-topbar-issues-history>
   </div>
   <div class="mr-4">
-    [ProjectManagement]
+    <cui-topbar-project-management></cui-topbar-project-management>
   </div>
   <div class="mr-auto">
-    [LiveSearch]
+    <cui-topbar-live-search></cui-topbar-live-search>
   </div>
   <a href="https://themeforest.net/user/mediatec_software" target="_blank" rel="noopener noreferrer" class="mr-4 d-none d-sm-inline">
     <button nz-button nzType="danger">
@@ -14,13 +14,12 @@
     </button>
   </a>
   <div class="mr-4">
-    [Bitcoin Price]
+    <cui-topbar-bitcoin-price></cui-topbar-bitcoin-price>
   </div>
   <div class="mr-4">
-    [L]
+    <cui-topbar-home-menu></cui-topbar-home-menu>
   </div>
-  <div class="mr-4">
-    [H]
+  <div>
+    <cui-topbar-profile-menu></cui-topbar-profile-menu>
   </div>
-  [P]
 </div>
