--- a/src/app/components/LayoutComponents/TopBar/ProfileMenu/profile-menu.component.html
+++ b/src/app/components/LayoutComponents/TopBar/ProfileMenu/profile-menu.component.html
@@ -6,18 +6,18 @@
   </a>
   <ul nz-menu>
     <li nz-menu-item>
-      <strong>Hello, Username</strong>
+      <strong>Hello, {{userName}}</strong>
       <div>
         <strong class="mr-1">
           Billing plan:
         </strong>
-        Professional
+        {{billingPlan}}
       </div>
       <div>
         <strong>
           Role:
         </strong>
-        Admin
+        {{role}}
       </div>
     </li>
     <li nz-menu-divider></li>
@@ -26,12 +26,12 @@
         <strong>
           Email:
         </strong>
-        admin@mediatec.org
+        {{email}}
         <br />
         <strong>
           Phone:
         </strong>
-        -
+        {{phone}}
       </div>
     </li>
     <li nz-menu-divider></li>
