--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -4,6 +4,7 @@
     [nzCollapsed]="isCollapsed" (nzCollapsedChange)="onCollapse($event)">
     <cui-menu></cui-menu>
   </nz-sider>
+  <cui-settings></cui-settings>
   <nz-layout>
     <nz-header>
       <cui-topbar></cui-topbar>
