--- a/src/app/components/LayoutComponents/Menu/menu.component.scss
+++ b/src/app/components/LayoutComponents/Menu/menu.component.scss
@@ -192,3 +192,47 @@
 // .scrollbarMobile {
 //   height: calc(100vh - 67px) !important;
 // }
+
+.handle {
+  position: absolute;
+  left: -100px;
+  top: 72px;
+  width: 41px;
+  height: 40px;
+  cursor: pointer;
+  z-index: 0;
+  text-align: center;
+  line-height: 40px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+
+  .handle-icon {
+    width: 14px;
+    height: 2px;
+    background: #333;
+    position: relative;
+    transition: background 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+
+    &:after,
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      background: #333;
+      width: 100%;
+      height: 2px;
+      transition: transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+    }
+
+    &:before {
+      top: -5px;
+    }
+
+    &:after {
+      top: 5px;
+    }
+  }
+}
