--- a/src/app/components/LayoutComponents/TopBar/ProfileMenu/profile-menu.component.html
+++ b/src/app/components/LayoutComponents/TopBar/ProfileMenu/profile-menu.component.html
@@ -1,4 +1,4 @@
-<nz-dropdown [nzTrigger]="'click'" [nzPlacement]="'bottomRight'" (nzVisibleChange)="badgeCountIncrease($event)">
+<nz-dropdown [nzTrigger]="'click'" [nzPlacement]="'bottomRight'" (nzVisibleChange)="badgeCountIncrease()">
   <a nz-dropdown class="dropdown">
     <nz-badge [nzCount]="badgeCount">
       <nz-avatar nzIcon="user" [nzShape]="'square'" [nzSize]="'large'" class="avatar"></nz-avatar>
