--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -1,1 +1,9 @@
-dashboard/alpha
+<div class="card">
+  <div class="card-header">
+    <div class="utils__title"><strong>Account Information</strong></div>
+    <div class="utils__titleDescription">Block with important Account information</div>
+  </div>
+  <div class="card-body">
+    Account
+  </div>
+</div>
