--- a/src/assets/styles/CleanUI/import/settings.scss
+++ b/src/assets/styles/CleanUI/import/settings.scss
@@ -37,7 +37,7 @@
   }
 
   &__menuShadow {
-    .ant-layout-sider {
+    .sider.ant-layout-sider {
       position: relative;
       z-index: 1;
       box-shadow: 0 0 200px -20px rgba(57, 55, 73, 0.4);
