--- a/src/global.scss
+++ b/src/global.scss
@@ -4,3 +4,4 @@
 @import 'assets/styles/Bootstrap/bootstrap.cleanui';
 @import 'assets/styles/CleanUI/cleanui';
 @import 'assets/styles/Nprogress/nprogress.cleanui';
+@import 'assets/styles/Chartist/chartist.cleanui';
