--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -5,10 +5,16 @@
     'settings__menuShadow': isMenuShadow
   }">
   <nz-back-top></nz-back-top>
-  <nz-sider [ngClass]="isLightTheme ? 'sider light' : 'sider'" nzCollapsible [nzWidth]="256" [(nzCollapsed)]="isMenuCollapsed"
+  <nz-sider *ngIf="!isMobileView && !isMenuTop" [ngClass]="isLightTheme ? 'sider light' : 'sider'" nzCollapsible [nzWidth]="256" [(nzCollapsed)]="isMenuCollapsed"
     (nzCollapsedChange)="onCollapse($event)">
-    <cui-menu></cui-menu>
+    <cui-menu [isMenuCollapsed]="isMenuCollapsed"></cui-menu>
   </nz-sider>
+  <nz-sider *ngIf="isMobileView && !isMenuTop" [ngClass]="isLightTheme ? 'sider light' : 'sider'" [nzWidth]="256">
+    <cui-menu [isMenuCollapsed]="false"></cui-menu>
+  </nz-sider>
+  <div *ngIf="isMenuTop">
+    MenuTop
+  </div>
   <cui-settings></cui-settings>
   <nz-layout>
     <nz-header>
