--- a/src/app/components/CleanUIComponents/ChartCard/chart-card.component.scss
+++ b/src/app/components/CleanUIComponents/ChartCard/chart-card.component.scss
@@ -1,13 +1,13 @@
 @import 'src/assets/styles/mixins.scss';
 
-.cui-chart-card {
+.chart-card {
   padding: rem(15) rem(30) rem(20);
   position: relative;
   overflow: hidden;
   min-height: 110px;
 }
 
-.cui-chart-card-graph {
+.chart-card-graph {
   height: 100%;
   width: 150px;
   position: absolute;
@@ -33,13 +33,13 @@
   }
 }
 
-.cui-chart-card-amount {
+.chart-card-amount {
   font-size: rem(36);
   color: $black;
   margin-bottom: rem(-10);
 }
 
-.cui-chart-card-title {
+.chart-card-title {
   color: $text;
   text-transform: uppercase;
   font-weight: bold;
