--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -18,15 +18,15 @@
         </div>
       </div>
       <div class="card-body">
-        <nz-table classs="utils__scrollTable" #basicTable [nzShowPagination]="false" [nzData]="referalsData">
-          <thead>
+        <nz-table [nzData]="displayReferalsData" [nzShowPagination]="false" class="utils__scrollTable">
+          <thead (nzSortChange)="sort($event)" nzSingleSort>
             <tr>
               <th>Name</th>
               <th>Position</th>
               <th>Office</th>
-              <th>Age</th>
+              <th nzShowSort nzSortKey="age">Age</th>
               <th>Date</th>
-              <th>Salary</th>
+              <th nzShowSort nzSortKey="salary">Salary</th>
             </tr>
           </thead>
           <tbody>
@@ -44,51 +44,35 @@
     </div>
   </div>
 </div>
-
-
-
-
-<div class="card">
-  <div class="card-header">
-    <div class="utils__title">
-      <strong>Chat</strong>
-    </div>
-    <div class="utils__titleDescription">Block with important Chat information</div>
-  </div>
-  <div class="card-body">
-    <cui-chat></cui-chat>
-  </div>
-</div>
-<cui-donut name="vlad"></cui-donut>
-<cui-info-card icon="bullhorn" form="stats"></cui-info-card>
-<cui-info-card icon="bullhorn" form="stats-large"></cui-info-card>
-<cui-info-card icon="bullhorn" form="interactive"></cui-info-card>
-<cui-info-card icon="bullhorn" form="bordered"></cui-info-card>
-<div class="card">
-  <div class="card-body">
-    <cui-invoice></cui-invoice>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-6" *ngFor="let paymentAccount of paymentAccountsData">
-    <cui-payment-account [icon]="paymentAccount.icon" [number]="paymentAccount.number" [sum]="paymentAccount.sum" [footer]="paymentAccount.footer"></cui-payment-account>
-  </div>
+<div class="utils__title utils__title--flat mb-3">
+  <strong class="text-uppercase font-size-16">Your Cards (3)</strong>
+  <button nz-button nz-type="default" class="ml-3">View All</button>
 </div>
 <div class="row">
   <div class="col-lg-4" *ngFor="let paymentCard of paymentCardsData">
     <cui-payment-card [icon]="paymentCard.icon" [name]="paymentCard.name" [number]="paymentCard.number" [type]="paymentCard.type" [footer]="paymentCard.footer" [sum]="paymentCard.sum"></cui-payment-card>
   </div>
 </div>
+<div class="utils__title utils__title--flat mb-3">
+  <strong class="text-uppercase font-size-16">Your Accounts (6)</strong>
+  <button nz-button nz-type="default" class="ml-3">View All</button>
+</div>
+<div class="row">
+  <div class="col-lg-6" *ngFor="let paymentAccount of paymentAccountsData">
+    <cui-payment-account [icon]="paymentAccount.icon" [number]="paymentAccount.number" [sum]="paymentAccount.sum" [footer]="paymentAccount.footer"></cui-payment-account>
+  </div>
+</div>
+<div class="utils__title utils__title--flat mb-3">
+  <strong class="text-uppercase font-size-16">Recent transactions (167)</strong>
+  <button nz-button nz-type="default" class="ml-3">View All</button>
+</div>
 <div class="row">
   <div class="col-lg-12">
     <cui-payment-transaction *ngFor="let paymentTransaction of paymentTransactionsData" [income]="paymentTransaction.income" [amount]="paymentTransaction.amount" [footer]="paymentTransaction.footer" [info]="paymentTransaction.info"></cui-payment-transaction>
   </div>
 </div>
-<cui-pricing-item type="success" [extended]="true"></cui-pricing-item>
-<cui-product-card></cui-product-card>
-<cui-profile-head-card></cui-profile-head-card>
-<cui-progress-card *ngFor="let progressCard of progressCardsData" [title]="progressCard.title" [note]="progressCard.note" [currentValue]="progressCard.currentValue" [percent]="progressCard.percent" [dataColor]="progressCard.dataColor"></cui-progress-card>
-<cui-progress-group></cui-progress-group>
-<cui-short-item-info></cui-short-item-info>
-<cui-slider-card></cui-slider-card>
-<cui-user-card type="primary"></cui-user-card>
+<div class="row">
+  <div class="col-lg-12 text-center">
+    <button nz-button nzType="primary" nzLoading class="width-200 mb-5"><i nz-icon type="poweroff"></i>Load more ...</button>
+  </div>
+</div>
