mobile menu with drawer / top menu / url setting refactoring

--- a/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
@@ -5,8 +5,7 @@
   </div>
 </div>
 <div [ngClass]="isLightTheme ? 'navigation light' : 'navigation'">
-  <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'inline'"
-    [nzInlineCollapsed]="isMenuCollapsed">
+  <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'horizontal'">
     <ng-container *ngFor="let item of menuData">
       <ng-container *ngIf="item.key === 'settings'">
         <li nz-menu-item (click)="toggleSettings()">
