--- a/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.scss
+++ b/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.scss
@@ -185,62 +185,62 @@
   }
 }
 
-// .scrollbarDesktop {
-//   height: calc(100vh - 112px) !important;
-// }
+.scrollbarDesktop {
+  height: calc(100vh - 112px) !important;
+}
 
-// .scrollbarMobile {
-//   height: calc(100vh - 67px) !important;
-// }
+.scrollbarMobile {
+  height: calc(100vh - 64px) !important;
+}
 
 ::ng-deep {
+  .ps__thumb-y {
+    width: 4px !important;
+  }
+
+  .ps__thumb-x {
+    height: 4px !important;
+  }
+
+  perfect-scrollbar > .ps.ps--scrolling-y > .ps__rail-y,
+  perfect-scrollbar > .ps.ps--scrolling-x > .ps__rail-x {
+    background: none !important;
+  }
+
+  .ps .ps__rail-x:hover,
+  .ps .ps__rail-y:hover,
+  .ps .ps__rail-x:focus,
+  .ps .ps__rail-y:focus,
+  .ps .ps__rail-x.ps--clicking,
+  .ps .ps__rail-y.ps--clicking {
+    background: none !important;
+  }
+
+  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y:hover,
+  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y.ps--clicking {
+    width: 10px !important;
+  }
+
+  .ps__rail-y:hover > .ps__thumb-y,
+  .ps__rail-y:focus > .ps__thumb-y,
+  .ps__rail-y.ps--clicking .ps__thumb-y {
+    width: 4px !important;
+  }
+
+  .ps__rail-x:hover > .ps__thumb-x,
+  .ps__rail-x:focus > .ps__thumb-x,
+  .ps__rail-x.ps--clicking .ps__thumb-x {
+    height: 4px !important;
+  }
+
+  perfect-scrollbar > .ps.ps--active-x > .ps__rail-x:hover,
+  perfect-scrollbar > .ps.ps--active-x > .ps__rail-x.ps--clicking {
+    height: 10px !important;
+  }
+
   @media (min-width: 1435px) {
     .settings__fixedWidth .sider.ant-layout-sider {
       border-left: 1px solid $gray-border;
-    }
-  }
-}
-
-.handle {
-  position: absolute;
-  left: -100px;
-  top: 72px;
-  width: 41px;
-  height: 40px;
-  cursor: pointer;
-  z-index: 0;
-  text-align: center;
-  line-height: 40px;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #fff;
-
-  .handle-icon {
-    width: 14px;
-    height: 2px;
-    background: #333;
-    position: relative;
-    transition: background 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-
-    &:after,
-    &:before {
-      content: '';
-      display: block;
-      position: absolute;
-      background: #333;
-      width: 100%;
-      height: 2px;
-      transition: transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-    }
-
-    &:before {
-      top: -5px;
-    }
-
-    &:after {
-      top: 5px;
     }
   }
 }
