--- a/src/app/pages/dashboard/beta/beta.component.html
+++ b/src/app/pages/dashboard/beta/beta.component.html
@@ -46,10 +46,12 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <cui-user-card type="primary" avatarUrl="assets/images/avatars/1.jpg" userName="Artour Aniston" userPost="Project Manager"></cui-user-card>
+            <cui-user-card type="primary" avatarUrl="assets/images/avatars/1.jpg" userName="Artour Aniston"
+                           userPost="Project Manager"></cui-user-card>
           </div>
           <div class="col-md-6">
-            <cui-user-card avatarUrl="assets/images/avatars/2.jpg" userName="Kim Mentiso" userPost="Project Manager"></cui-user-card>
+            <cui-user-card avatarUrl="assets/images/avatars/2.jpg" userName="Kim Mentiso"
+                           userPost="Project Manager"></cui-user-card>
           </div>
         </div>
       </div>
@@ -80,7 +82,7 @@
               [nzIndeterminate]="indeterminate"
               (nzCheckedChange)="checkAll($event)"
             ></th>
-            <th >Name</th>
+            <th>Name</th>
             <th>Username</th>
             <th>Actions</th>
           </tr>
@@ -135,8 +137,8 @@
           </div>
         </div>
       </div>
+    </div>
   </div>
-</div>
   <div class="col-xl-6 col-lg-12">
     <div class="card">
       <div class="card-header">
@@ -186,7 +188,7 @@
           <nz-slider [nzMarks]="rangeMarks" [nzDefaultValue]="rangeSlider.first"></nz-slider>
         </div>
         <div class="mb-5">
-          <nz-slider [nzMarks]="rangeMarks" nzRange  [nzDefaultValue]="rangeSlider.second"></nz-slider>
+          <nz-slider [nzMarks]="rangeMarks" nzRange [nzDefaultValue]="rangeSlider.second"></nz-slider>
         </div>
       </div>
     </div>
@@ -201,12 +203,86 @@
       </div>
       <div class="card-body">
         <x-chartist
-          class="ct-chart"
+          class="ct-chart height-300"
           [data]="weekChartData"
           type="Line"
           [options]="weekChartOptions"
         >
         </x-chartist>
       </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <div class="utils__title">
+          <strong>Month Site Visits Growth, %</strong>
+        </div>
+        <cui-donut type="primary" name="Income"></cui-donut>
+        <cui-donut type="success" name="Outcome"></cui-donut>
+      </div>
+      <div class="card-body">
+        <x-chartist
+          class="ct-chart height-300"
+          [data]="monthChartData"
+          type="Bar"
+          [options]="monthChartOptions"
+        >
+        </x-chartist>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <div class="utils__title">
+          <strong>Chat</strong>
+        </div>
+        <div class="utils__titleDescription">
+          Block with important Server Info information
+        </div>
+      </div>
+      <div class="card-body">
+        <cui-chat></cui-chat>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-lg-3">
+            <cui-info-card form="bordered" icon="home" type="danger"></cui-info-card>
+          </div>
+          <div class="col-lg-3">
+            <cui-info-card form="bordered" icon="key" type="primary"></cui-info-card>
+          </div>
+          <div class="col-lg-3">
+            <cui-info-card form="bordered" icon="play2" type="warning"></cui-info-card>
+          </div>
+          <div class="col-lg-3">
+            <cui-info-card form="bordered" icon="database" type="success"></cui-info-card>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="utils__title">
+          <strong>Calendar</strong>
+        </div>
+        <div class="utils__titleDescription">
+          Block with important Calendar information
+        </div>
+      </div>
+      <div class="card-body">
+        <nz-calendar></nz-calendar>
+      </div>
+    </div>
   </div>
 </div>
