--- a/src/app/components/CleanUIComponents/Avatar/avatar.component.html
+++ b/src/app/components/CleanUIComponents/Avatar/avatar.component.html
@@ -1,5 +1,5 @@
 <a href="javascript: void(0);"
-   class="cui-avatar"
+   class="avatar"
    [ngClass]="[
      size ? sizeClass : '',
      bordered ? borderedClass : ''
