--- a/src/app/pages/dashboard/beta/beta.component.html
+++ b/src/app/pages/dashboard/beta/beta.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header">
         <div class="utils__title">
-          <strong>Accunt Information</strong>
+          <strong>Account Information</strong>
         </div>
         <div class="utils__titleDescription">
           Block with important Account information
