--- a/src/app/components/CleanUIComponents/Avatar/avatar.component.scss
+++ b/src/app/components/CleanUIComponents/Avatar/avatar.component.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/styles/mixins.scss';
 
-.cui-avatar {
+.avatar {
   width: rem(35);
   height: rem(35);
   background-color: $gray-lighten;
@@ -15,36 +15,36 @@
   }
 }
 
-.avatar--size20 {
+.size20 {
   width: rem(20);
   height: rem(20);
 }
 
-.cui-avatar-size-25 {
+.size25 {
   width: rem(25);
   height: rem(25);
 }
 
-.cui-avatar-size-50 {
+.size50 {
   width: rem(50);
   height: rem(50);
 }
 
-.cui-avatar-size-70 {
+.size70 {
   width: rem(70);
   height: rem(70);
 }
 
-.cui-avatar-size-90 {
+.size90 {
   width: rem(90);
   height: rem(90);
 }
 
-.cui-avatar-size-110 {
+.size110 {
   width: rem(110);
   height: rem(110);
 }
 
-.cui-avatar-bordered {
+.bordered {
   border: 4px solid $gray;
 }
