--- a/src/app/components/CleanUIComponents/ChartCard/chart-card.component.html
+++ b/src/app/components/CleanUIComponents/ChartCard/chart-card.component.html
@@ -1,5 +1,5 @@
-<div class="chart-card card">
-  <div class="chart-card-graph">
+<div class="chartCard card">
+  <div class="chartCardGraph">
     <x-chartist
       [data]="chartData"
       [type]="chartOptions.type"
@@ -8,6 +8,6 @@
       [events]="chartOptions.events">
     </x-chartist>
   </div>
-  <div class="chart-card-amount">{{amount}}</div>
-  <div class="chart-card-title">{{title}}</div>
+  <div class="chartCardAmount">{{amount}}</div>
+  <div class="chartCardTitle">{{title}}</div>
 </div>
