--- a/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuLeft/menu-left.component.html
@@ -7,44 +7,41 @@
 <perfect-scrollbar [ngClass]="isMobileView ? 'scrollbarMobile' : 'scrollbarDesktop'">
   <div [ngClass]="isLightTheme ? 'navigation light' : 'navigation'">
     <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'inline'" [nzInlineCollapsed]="isMenuCollapsed">
-      <ng-container *ngFor="let item of menuData">
-        <ng-container *ngIf="item.key === 'settings'">
-          <li nz-menu-item (click)="toggleSettings()">
+      <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuData}"></ng-container>
+      <ng-template #menuTpl let-menuData>
+        <ng-container *ngFor="let item of menuData">
+          <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'">
             <span>
               <span class="title">{{item.title}}</span>
-              <i [ngClass]="[item.icon, 'icon']"></i>
+              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
           </li>
-        </ng-container>
-        <ng-container *ngIf="item.url && item.target">
-          <li nz-menu-item>
+          <li nz-menu-item *ngIf="item.url && item.target">
             <a href={{item.url}} target={{item.target}}>
               <span class="title">{{item.title}}</span>
-              <i [ngClass]="[item.icon, 'icon']"></i>
+              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </a>
           </li>
-        </ng-container>
-        <ng-container *ngIf="item.url && !item.target">
-          <li nz-menu-item routerLink={{item.url}}>
+          <ng-container *ngIf="item.divider">
+            <li nz-menu-divider></li>
+          </ng-container>
+          <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzDisabled]="item.disabled">
             <span>
               <span class="title">{{item.title}}</span>
-              <i [ngClass]="[item.icon, 'icon']"></i>
+              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
           </li>
-        </ng-container>
-        <ng-container *ngIf="item.children">
-          <li nz-submenu>
+          <li nz-submenu *ngIf="item.children">
             <span title>
               <span class="title">{{item.title}}</span>
-              <i [ngClass]="[item.icon, 'icon']"></i>
+              <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
             </span>
-            <!-- submenu items here -->
+            <ul>
+              <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children}"></ng-container>
+            </ul>
           </li>
         </ng-container>
-        <ng-container *ngIf="item.divider">
-          <li nz-menu-divider></li>
-        </ng-container>
-      </ng-container>
+      </ng-template>
     </ul>
   </div>
 </perfect-scrollbar>
