--- a/src/app/components/LayoutComponents/Breadcrumbs/breadcrumbs.component.html
+++ b/src/app/components/LayoutComponents/Breadcrumbs/breadcrumbs.component.html
@@ -1,13 +1,15 @@
 <div class="breadcrumbs">
   <div class="path">
     <a href routerLink="/dashboard/alpha" class="text-muted">Home</a>
-    <span>
-      <span class="arrow text-muted"></span>
-      <span class="text-muted">Pages</span>
-    </span>
-    <span>
-      <span class="arrow"></span>
-      <strong>Dashboard Alpha</strong>
-    </span>
+    <ng-container *ngFor="let item of breadcrumbs; let last = last;">
+      <span *ngIf="!last">
+        <span class="arrow text-muted"></span>
+        <span class="text-muted">{{ item.title }}</span>
+      </span>
+      <span *ngIf="last">
+        <span class="arrow"></span>
+        <strong>{{ item.title }}</strong>
+      </span>
+    </ng-container>
   </div>
 </div>
