--- a/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
+++ b/src/app/components/LayoutComponents/Menu/MenuTop/menu-top.component.html
@@ -6,9 +6,9 @@
 </div>
 <div [ngClass]="isLightTheme ? 'navigation light' : 'navigation'">
   <ul nz-menu [nzTheme]="isLightTheme ? 'light' : 'dark'" [nzMode]="'horizontal'">
-    <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuData}"></ng-container>
-    <ng-template #menuTpl let-menuData>
-      <ng-container *ngFor="let item of menuData">
+    <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated}"></ng-container>
+    <ng-template #menuTpl let-menuDataActivated>
+      <ng-container *ngFor="let item of menuDataActivated">
         <li nz-menu-item (click)="toggleSettings()" *ngIf="item.key === 'settings'">
           <span>
             <span class="title">{{item.title}}</span>
@@ -24,7 +24,7 @@
         <ng-container *ngIf="item.divider">
           <li nz-menu-divider></li>
         </ng-container>
-        <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzDisabled]="item.disabled">
+        <li nz-menu-item *ngIf="!item.children && item.url && !item.target" routerLink={{item.url}} [nzSelected]="item.selected" [nzDisabled]="item.disabled">
           <span>
             <span class="title">{{item.title}}</span>
             <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
