--- a/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.html
+++ b/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.html
@@ -1,1 +1,11 @@
-[BitcoinPrice]
+<div class="bitcoinPriceContainer">
+  Bitcoin:
+  <div class="bitcoinPrice">
+    <x-chartist
+      [data]="chartData"
+      type="Line"
+      [options]="chartOptions">
+    </x-chartist>
+  </div>
+  +20%
+</div>
