--- a/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.scss
+++ b/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.scss
@@ -1,1 +1,17 @@
 @import 'src/assets/styles/mixins.scss';
+.bitcoinPriceContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.bitcoinPrice {
+  height: 62px;
+  width: 70px;
+  overflow: hidden;
+
+  ::ng-deep {
+    .ct-line {
+      stroke-width: 1px;
+    }
+  }
+}
