--- a/src/app/layouts/Login/login.component.html
+++ b/src/app/layouts/Login/login.component.html
@@ -1,17 +1,24 @@
 <nz-layout>
   <nz-content>
-    <div class="layout">
-      <div class="header">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="logo">
-              <a href routerLink="/">
-                <img src="assets/images/logo.png" alt="Clean UI Angular Admin Template" />
-              </a>
-            </div>
-          </div>
+    <div [ngClass]="{'login': true, 'light': backgroundEnabled}" [ngStyle]="{backgroundImage: backgroundEnabled ? 'url(\'assets/images/photos/' + backgroundNumber + '.jpeg\')' : 'none'}">
+      <header class="header">
+        <a href="javascript: void(0);" class="logo">
+          <img *ngIf="!backgroundEnabled" src="assets/images/logo.png" alt="Clean UI Admin Template">
+          <img *ngIf="backgroundEnabled" src="assets/images/logo-inverse.png" alt="Clean UI Admin Template">
+        </a>
+        <div class="styleControls">
+          <button nz-button nzType="default" class="mr-3" (click)="changeBackground()">Change Background</button>
+          <button nz-button nzType="default" (click)="toggleBackground()">Toggle Background</button>
         </div>
-      </div>
+        <nav class="loginNav">
+          <ul class="navItems">
+            <li><a href="javascript: void(0);">&larr; Back</a></li>
+            <li><a class="active" href="javascript: void(0);">Login</a></li>
+            <li><a href="javascript: void(0);">About</a></li>
+            <li><a href="javascript: void(0);">Support</a></li>
+          </ul>
+        </nav>
+      </header>
       <div class="content">
         <router-outlet></router-outlet>
       </div>
