--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -24,7 +24,9 @@
             <nz-form-item>
               <nz-form-label nzFor="email">Email</nz-form-label>
               <nz-form-control>
-                <input nz-input id="email" formControlName="email">
+                <nz-input-group [nzPrefix]="prefixUser">
+                  <input nz-input id="email" formControlName="email">
+                </nz-input-group>
                 <nz-form-explain *ngIf="email.dirty && email.errors">
                   Please input your e-mail address
                 </nz-form-explain>
@@ -33,21 +35,45 @@
             <nz-form-item>
               <nz-form-label nzFor="password">Password</nz-form-label>
               <nz-form-control>
-                <input type="password" nz-input id="password" formControlName="password">
+                <nz-input-group [nzPrefix]="prefixLock">
+                  <input type="password" nz-input id="password" formControlName="password">
+                </nz-input-group>
                 <nz-form-explain *ngIf="password.dirty && password.errors">
                   Please input your e-mail address
                 </nz-form-explain>
               </nz-form-control>
             </nz-form-item>
-            <div className="mb-2">
-              <a href routerLink="/user/forgot" class="utils__link--blue utils__link--underlined">
-                Forgot Password
-              </a>
+            <div>
+              <label nz-checkbox>
+                Remember me
+              </label>
+              <a href routerLink="/user/forgot" class="login-form-forgot pull-right text-primary">Forgot password</a>
             </div>
             <div class="form-actions">
-              <button nz-button nzType="primary" class="width-150 mr-4">
-                Login
+              <button nz-button nzType="primary" class="width-150">
+                Sign in
               </button>
+              <span class="ml-3 register-link">
+                <a href="javascript: void(0);" class="text-primary utils__link--underlined">Register</a>
+                if you don&#39;t have an account
+              </span>
+            </div>
+            <div class="form-group">
+              <p>Use another service to Sign In</p>
+              <div class="mt-2">
+                <a href="javascript: void(0);" class="btn btn-icon mr-2">
+                  <i class="icmn-facebook"></i>
+                </a>
+                <a href="javascript: void(0);" class="btn btn-icon mr-2">
+                  <i class="icmn-google"></i>
+                </a>
+                <a href="javascript: void(0);" class="btn btn-icon mr-2">
+                  <i class="icmn-windows"></i>
+                </a>
+                <a href="javascript: void(0);" class="btn btn-icon mr-2">
+                  <i class="icmn-twitter"></i>
+                </a>
+              </div>
             </div>
           </form>
         </div>
@@ -55,3 +81,5 @@
     </div>
   </div>
 </div>
+<ng-template #prefixUser><i nz-icon type="user"></i></ng-template>
+<ng-template #prefixLock><i nz-icon type="lock"></i></ng-template>
