bitcoin price fix

--- a/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.scss
+++ b/src/app/components/LayoutComponents/TopBar/BitcoinPrice/bitcoin-price.component.scss
@@ -2,6 +2,10 @@
 .bitcoinPriceContainer {
   display: flex;
   flex-direction: row;
+
+  @media (max-width: $xs-max-width) {
+    display: none;
+  }
 }
 
 .bitcoinPrice {
