--- a/src/assets/styles/CleanUI/import/core.scss
+++ b/src/assets/styles/CleanUI/import/core.scss
@@ -3,6 +3,12 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 /*  CORE MODULE STYLES */
 
+html,
+body {
+  width: auto;
+  height: auto;
+}
+
 html {
   font-size: 13px;
   overflow-y: scroll;
