--- a/src/app/pages/layout/mail-templates/mail-templates.component.html
+++ b/src/app/pages/layout/mail-templates/mail-templates.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-lg-12">
         <h5 class="text-black"><strong>Simple Email</strong></h5>
         <p class="text-muted">Element: see source code</p>
         <div class="mb-5">
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-lg-12">
         <h5 class="text-black"><strong>Email w/ Header</strong></h5>
         <p class="text-muted">Element: see source code</p>
         <div class="mb-5">
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-lg-12">
         <h5 class="text-black"><strong>Ecommerce Email</strong></h5>
         <p class="text-muted">Element: see source code</p>
         <div class="mb-5">
@@ -290,7 +290,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-12">
+      <div class="col-lg-12">
         <h5 class="text-black"><strong>Email w/ Action</strong></h5>
         <p class="text-muted">Element: see source code</p>
         <div class="mb-5">
