--- a/src/app/pages/dashboard/beta/beta.component.html
+++ b/src/app/pages/dashboard/beta/beta.component.html
@@ -146,10 +146,13 @@
           <strong>Server Info</strong>
         </div>
         <div class="utils__titleDescription">
-          Block with important Server Info information
+          Block with important Server Info informastion
         </div>
       </div>
       <div class="card-body">
+        <nz-carousel>
+          <div nz-carousel-content *ngFor="let index of array"><h3>{{index}}</h3></div>
+        </nz-carousel>
       </div>
     </div>
     <div class="card">
