--- a/src/app/pages/dashboard/gamma/gamma.component.html
+++ b/src/app/pages/dashboard/gamma/gamma.component.html
@@ -1,1 +1,5 @@
-dashboard/gamma
+<div class="carousel-wrapper">
+<nz-carousel>
+  <div nz-carousel-content *ngFor="let index of array"><h3>{{index}}</h3></div>
+</nz-carousel>
+</div>
