--- a/src/app/pages/github/discuss/discuss.component.scss
+++ b/src/app/pages/github/discuss/discuss.component.scss
@@ -1,72 +1,74 @@
 @import 'src/assets/styles/mixins.scss';
 
-.discuss {
+.cui-github-discuss-container {
   max-width: rem(1000);
   margin: 0 auto;
-
-  :global(.fa-check-circle-o) {
-    font-size: rem(16);
-  }
 }
 
-.header {
+.cui-github-discuss-header {
   position: relative;
   border-bottom: 1px solid rgba($black, 0.125);
   padding-bottom: rem(15);
   margin-bottom: rem(20);
 }
 
-.title {
+.cui-github-discuss-title {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 
-.titleText {
+.cui-github-discuss-title-text {
   font-size: rem(32);
   margin-right: auto;
 }
 
-.open {
+.cui-github-discuss-open {
   margin-top: rem(6);
   margin-bottom: rem(10);
 }
 
-.status {
+.cui-github-discuss-status {
   display: inline-block;
   vertical-align: top;
   margin-right: rem(10);
   cursor: default !important;
+
+  ::ng-deep {
+    .fa {
+      font-size: rem(17);
+    }
+  }
 }
 
-.metaText {
+.cui-github-discuss-meta-text {
   display: inline-block;
   vertical-align: top;
   margin-top: rem(6);
 }
 
-.commentAvatar {
+.cui-github-discuss-comment-avatar {
   float: left;
 }
 
-.commentItem {
+.cui-github-discuss-comment-item {
   margin-bottom: rem(20);
 }
 
-.contentWrapper {
+.cui-github-discuss-content-wrapper {
   border-radius: 5px;
   margin-left: rem(70);
   border: 1px solid rgba(14, 11, 32, 0.15);
 }
 
-.commentsCount,
-.createDate {
+.cui-github-discuss-comments-count,
+.cui-github-discuss-create-date {
   display: inline-block;
   vertical-align: top;
 }
 
-.sidebarItem {
+.cui-github-discuss-sidebar-item {
   padding-top: rem(15);
   border-bottom: 1px solid rgba($black, 0.15);
   padding-bottom: rem(15);
@@ -76,28 +78,28 @@
   }
 }
 
-.sidebarHead {
+.cui-github-discuss-sidebar-head {
   font-size: rem(13);
   font-weight: bold;
   color: $black;
   margin-bottom: rem(10);
 }
 
-.participantsList {
+.cui-github-discuss-participants-list {
   margin: 0;
   padding: 0;
   list-style: none;
   font-size: 0;
 }
 
-.participantsItem {
+.cui-github-discuss-participants-item {
   display: inline-block;
   vertical-align: top;
   margin-right: rem(3);
   margin-bottom: rem(3);
 }
 
-.commentHead {
+.cui-github-discuss-comment-head {
   padding-top: rem(10);
   padding-left: rem(15);
   padding-right: rem(15);
@@ -134,7 +136,7 @@
   }
 }
 
-.emptyCommentHead {
+.cui-github-discuss-empty-comment-head {
   background-color: transparent;
   padding: 0;
   border-bottom: none;
@@ -144,28 +146,30 @@
   }
 }
 
-.addComment {
+.cui-github-discuss-add-comment {
   margin-bottom: rem(40);
 
-  .commentHead {
+  .cui-github-discuss-comment-head {
     padding-top: rem(5);
+
+    ::ng-deep {
+      .ck-content {
+        height: rem(180);
+      }
+    }
   }
 
-  .commentBottom {
+  .cui-github-discuss-comment-bottom {
     padding-top: rem(10);
     border-top: 1px solid $gray-border;
   }
-
-  :global(.rdw-editor-wrapper) {
-    border: none;
-  }
 }
 
-.commentContent {
+.cui-github-discuss-comment-content {
   padding: rem(15);
 }
 
-.commentBottom {
+.cui-github-discuss-comment-bottom {
   padding-left: rem(15);
   padding-right: rem(15);
   padding-bottom: rem(10);
