--- a/src/app/pages/github/explore/explore.component.scss
+++ b/src/app/pages/github/explore/explore.component.scss
@@ -1,28 +1,28 @@
 @import 'src/assets/styles/mixins.scss';
 
-.explore {
+.cui-github-explore-container {
   max-width: rem(1000);
   margin: 0 auto;
 }
 
-.descr {
+.cui-github-explore-descr {
   margin-bottom: rem(14);
 }
 
-.descrText {
+.cui-github-explore-descr-text {
   display: inline-block;
   margin-bottom: 0;
   margin-top: 6px;
 }
 
-.overallData {
+.cui-github-explore-overall-data {
   border: 1px solid $gray-border;
   border-radius: 4px;
   padding: rem(7);
   margin-bottom: rem(12);
 }
 
-.overallDataList {
+.cui-github-explore-overall-data-list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -30,28 +30,22 @@
   width: 100%;
 }
 
-.overallDataItem {
+.cui-github-explore-overall-data-item {
   display: table-cell;
   text-align: center;
   font-weight: bold;
 }
 
-.sortLeft {
+.cui-github-explore-sort-left {
   float: left;
   margin-bottom: rem(12);
 
   @media (max-width: $md-max-width) {
     float: none;
   }
-
-  :global(.dropdown-toggle) {
-    padding-top: rem(2.6);
-    padding-bottom: rem(2.6);
-    border: 1px solid $gray;
-  }
 }
 
-.sortRight {
+.cui-github-explore-sort-right {
   float: right;
   margin-bottom: rem(12);
 
@@ -60,7 +54,7 @@
   }
 }
 
-.sortOption {
+.cui-github-explore-sort-option {
   display: inline-block;
   vertical-align: top;
 
@@ -69,16 +63,16 @@
   }
 }
 
-.nav {
+.cui-github-explore-nav {
   border-top: 1px solid rgba($black, 0.1);
   border-bottom: 1px solid rgba($black, 0.1);
 }
 
-.navIcon {
+.cui-github-explore-nav-icon {
   width: 17px;
   padding-right: 0 !important;
 }
 
-.navTime {
+.cui-github-explore-nav-time {
   text-align: right;
 }
